Added context params for ping-ponging stateful parameters between requests, and include the CSRF filter value in common form params